# ollama-ha-proxy

./: Makefile  README.md  compose.yaml  model_list.sh  pyproject.toml  run_model.sh
docs/: deploy.md
examples/: use_ollama_with_proxy.py
gateway/: Dockerfile  go.mod  main.go
worker/: Dockerfile  go.mod  main.go
