[project]
name = "ollama-ha-proxy-examples"
version = "0.1.0"
description = "Example client scripts for the Ollama HA proxy"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
]

[project.optional-dependencies]
openai = ["openai>=1.51.0"]
dev = [
    "openai>=1.51.0",
]

[tool.uv]
package = false
